[tool.poetry]
name = "nbainjuries"
version = "0.5.0"
packages = [
    { include = "nbainjuries", from = "src" }
]
description = "Library for accessing and extracting real-time NBA player injury data from official team injury reports."
authors = ["mxufc29 <mxufc29@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mxufc29/nbainjuries"
documentation = "https://github.com/mxufc29/nbainjuries/blob/main/Injury_Documentation.md"
classifiers = ["Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Information Analysis"]
keywords = ["nba", "injuries", "basketball", "sports", "analytics"]

[tool.poetry.dependencies]
python    = "^3.9"
aiohttp   = "^3.9.3"
jpype1    = "^1.5.2"
pandas    = "^2.2.3"
PyPDF2    = "^3.0.1"
requests  = "^2.32.3"
tabula-py = "^2.9.0"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core>=1.8.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
